--- a/package.json
+++ b/package.json
@@ -70,11 +70,11 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "jest": "^28.0.3",
+    "jest": "27.5.1",
     "prettier": "^2.6.2",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.3",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "27.1.3",
     "ts-loader": "^9.3.0",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
