--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "migration:gen": "yarn typeorm migration:generate -p -d src/modules/database/cli/default-connection.ts",
     "migration:run": "yarn typeorm migration:run -d src/modules/database/cli/default-connection.ts",
     "migration:rev": "yarn typeorm migration:revert -d src/modules/database/cli/default-connection.ts",
-    "seeds:gen": "yarn typeorm migration:create -d src/modules/database/cli/seeds-connection.ts",
+    "seeds:gen": "yarn typeorm migration:generate -d src/modules/database/cli/seeds-connection.ts",
     "seeds:run": "yarn typeorm migration:run -d src/modules/database/cli/seeds-connection.ts"
   },
   "dependencies": {
