--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
     "typeorm": "^0.3.6",
+    "typeorm-encrypted": "^0.6.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
