--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "make:migration": "chmod +x ./infra/make-migration.sh && bash ./infra/make-migration.sh",
     "make:seeds": "chmod +x ./infra/make-migration.sh && bash ./infra/make-seeds.sh",
-    "prepare:env": "chmod +x ./make.sh && bash make.sh",
+    "make:env": "chmod +x ./make.sh && bash make.sh",
     "prepare:husky": "husky install",
     "test": "jest",
     "test:watch": "jest --watch",
