--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "make:migration": "chmod +x ./infra/make-migration.sh && bash ./infra/make-migration.sh",
     "make:seeds": "chmod +x ./infra/make-migration.sh && bash ./infra/make-seeds.sh",
-    "make:env": "chmod +x ./make.sh && bash make.sh",
+    "make:env": "chmod +x ./infra/make-env.sh && bash make.sh",
     "prepare:husky": "husky install",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -40,6 +40,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "helmet": "^5.0.2",
     "ioredis": "^5.0.4",
@@ -48,6 +49,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
+    "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.3.6",
     "typeorm-encrypted": "^0.6.0",
     "uuid": "^8.3.2"
@@ -57,6 +59,7 @@
     "@nestjs/schematics": "^8.0.10",
     "@nestjs/testing": "^8.4.4",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
@@ -64,6 +67,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.31",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
